# learn_crewAI

./: .env  .gitignore  LICENSE  README.md  concepts.md  pyproject.toml
src/: L2_research_write_article.py  L3_customer_support.py  L4_tools_customer_outreach.py  L5_tasks_event_planning.py  L6_collaboration_financial_analysis.py  L7_job_application_crew.py
src/L5/: marketing_report.md  venue_details.json
src/L7/: interview_materials.md  tailored_resume.md
